Update runtests.shw
Signed-off-by: Andrew Leonard <anleonar@redhat.com>